Fix: Make cta visible with sticky content navbar

--- a/app/assets/stylesheets/components/_content_navbar.scss
+++ b/app/assets/stylesheets/components/_content_navbar.scss
@@ -13,6 +13,10 @@
     display: block;
   }
 
+  @media (min-width: $breakpoint-lg) {
+    display: block;
+  }
+
   @media (min-width: $breakpoint-xl) {
     font-size: 1rem;
 
@@ -27,6 +31,11 @@
     left: 0;
     right: 0;
     z-index: 2;
+    padding-top: 4rem;
+
+    @media (min-width: $breakpoint-lg) {
+      padding-top: 0;
+    }
   }
 
   &-links {
