--- a/app/assets/stylesheets/pages/become_associate.scss
+++ b/app/assets/stylesheets/pages/become_associate.scss
@@ -5,8 +5,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1;
-    padding: 1rem;
+    z-index: 3;
     justify-content: center;
     border-radius: 0;
 
